# SysProg_Cuda_Nova

./: .gitignore  CMakeLists.txt  DataManage_ScanAllTableCnts4JSon_MsSQL.py  DataManage_ScanAllTableCnts4JSon_PostGreSQL.py  Driver_Main.py  Driver_code.ps1  Driver_code_OMV6.ps1  Driver_code_QNAP-T431P.ps1  Driver_code_SynologyD1821+.ps1  MZMineMain.py  MolRefAntGUI.py  NetworkDriverMain.py  README.md  compiler_config.yaml  cp_file_NetUse_QNAP-T431P.csv  cp_file_NetUse_QNAP-T432P.csv  doxygen-config-file.dxy  global.cu  global.cuh  launch_netusage.sh  launcher_MZMineMain.ps1  launcher_MZMineMain_debian.ps1  launcher_alldjango_models.ps1  main.cu
Scripts/MonitoringTools/: BackTrace.sh  get_gpu.py  incrementalspeed-DESKTOP-GPI5ERK.py  incrementalspeed.py  plot.sh  progressbar.sh
Scripts/Windows/: MountShareDrives.ps1  OpenMediaVault_usersAuth.csv  Qnap_usersAuth.csv  Synology_usersAuth.csv  UmountShareDrives.ps1  VirtualMachine_start.ps1  VirtualMachine_status.ps1  VirtualMachine_stop.ps1  junk.ps1
doc/: codeOrganisation.drawio
doc/OBS/Infrastructure/: Pages web outil annotation.pptx  Rstudio_setup.drawio  code_infrasrtucture.drawio  infracstructure.drawio  insertion_procedure.drawio
doc/Templates/: deepL_ClassTemplate.cpp  deepL_ClassTemplate.hpp
include/: Adapters.cuh  Exception.cuh  GetPID.h  Network.cuh  Sockets.cuh  carte_mesh_3D.cuh  cmdLine.cuh  common.cuh  common_Helpr_gpu.cuh  common_krnl.cuh  cuAtomics.cuh  dataDeviceManag.cuh  deviceTools_gpu.cuh  get_deviceQuery_gpu.cuh  get_systemQuery_cpu.cuh  resmap_Sizes.cuh  testing_unitTest.cuh  timming.cuh
src/: Adapters.cu  GetPID.c  Network.cu  Sockets.cu  carte_mesh_3D.cu  common_Helpr_gpu.cu  common_krnl_gpu.cu  dataDeviceManag.cu  resmap_Sizes.cu
src/PythonCodes/: DataManage_common.py  DataManage_fileIO.py  DataManage_header.py  DataManage_preProcessing.py  docopt.py
src/PythonCodes/Analysis_results/: cp_file_NetUse_QNAP-T431P.csv  cp_file_NetUse_QNAP-T432P.csv  cp_file_NetUse_SynologyD1821+.csv
src/PythonCodes/src/: Usage_Network.py
src/PythonCodes/test_codes/: junk.ps1  junk.python
src/PythonCodes/utils/: Bots_Selenium.py  Command_line.py  DataBaseHandler.py  DjangoLauncher.py  JSonCreator.py  JSonLauncher.py  JSonScanner.py  MZmineModel_Analyser.py  MathematicalModel_Analyser.py  MgfTransformer.py  StopWatch.py  messageHandler.py  (+1 more)
test_codes/cpu/: junk.cmake  junk.cpp  junk.cu  junk.cuh  system1-Linux.cpp  system2-Linux.cpp  system3-Windows.cpp  testing_ChronoTime.cpp  testing_Network.cu  testing_Network.cuh
test_codes/gpu/: testing_unitTest.cu
utils/: cmdLine.cu  deviceTools_gpu.cu  get_deviceQuery_gpu.cu  get_systemQuery_cpu.cu  timming.cu
(+90 files in other folders)
